// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Project component should match the snapshot 1`] = `
<div>
  <div
    onClick={[Function]}
  >
    <p />
    <i
      class="fas fa-pencil-alt"
    />
    <i
      class="far fa-trash-alt"
    />
  </div>
</div>
`;

exports[`Project Project component should match the snapshot when expanded is true 1`] = `
<div>
  <div
    onClick={[Function]}
  >
    <p />
    <i
      class="fas fa-pencil-alt"
    />
    <i
      class="far fa-trash-alt"
    />
  </div>
  <MiniPalette />
</div>
`;
